objects/Presenter__c.object
<CustomObject>
    <fields>
        <fullName>Accept_for_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accept for Presenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presenters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Presenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Architecture_Experience__c</fullName>
        <label>Architecture Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Priorities</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Cross Architectures/Verticals</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Data Center and Virtualization</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>PM logistics</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Security and Trust</fullName>
                </value>
                <value>
                    <fullName>Service provider</fullName>
                </value>
                <value>
                    <fullName>Service provider Demo</fullName>
                </value>
                <value>
                    <fullName>Service Provider Video</fullName>
                </value>
                <value>
                    <fullName>Software and Services</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRF_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRF Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certifications_Training__c</fullName>
        <label>Certifications/Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cisco_Start_Year__c</fullName>
        <label>Cisco Start Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_Level_Presenting__c</fullName>
        <inlineHelpText>Years speaking, trainees, etc.</inlineHelpText>
        <label>Experience Level Presenting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Individuals_to_CC__c</fullName>
        <label>Individuals to CC on all invitations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Load_Balancing__c</fullName>
        <label>Load Balancing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_of_ITSB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member of IT Experts (ITE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Backup_Speakers__c</fullName>
        <label>My Backup Speakers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>My_Collaborators__c</fullName>
        <label>My Collaborators</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentation_Topics__c</fullName>
        <label>Presentation Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test1</fullName>
                </value>
                <value>
                    <fullName>test2</fullName>
                </value>
                <value>
                    <fullName>test3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenting_Languages__c</fullName>
        <label>Presenting Languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Experience__c</fullName>
        <label>Segment Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaker_Accreditation__c</fullName>
        <label>Speaker Accreditation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presenter_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vertical_Experience__c</fullName>
        <label>Vertical Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Defence</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Sports and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Expertise</label>
    <nameField>
        <displayFormat>US-{00000000}</displayFormat>
        <label>Skill User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Presentation_Topics__c</columns>
        <columns>Target_Audience__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>